Fix the build for some internal configurations https://bugs.webkit.org/show_bug.cgi?id=286760 rdar://143901633

Unreviewed build fix.

* Source/JavaScriptCore/API/tests/testapi.mm:
(cacheFileInDataVault):
* Source/WebKit/Shared/mac/AuxiliaryProcessMac.mm:
(WebKit::ensureSandboxCacheDirectory):

Canonical link: https://commits.webkit.org/289570@main